--- a/src/layouts/components/widgets/Hero.astro
+++ b/src/layouts/components/widgets/Hero.astro
@@ -42,13 +42,13 @@ const socialIcons = {
       <div class="text-center pb-10 md:pb-16">
         <h1 class="text-5xl md:text-[3.50rem] font-bold leading-tighter tracking-tighter mb-4 font-heading text-gray-900 dark:text-white">
           Welcome to
-          <span class="bg-clip-text text-transparent bg-gradient-to-r from-blue-500 to-indigo-500 sm:whitespace-nowrap"
-            >Bit Doze</span
+          <span class="text-[#7f9665] sm:whitespace-nowrap"
+            >Unburdened You Blog</span
           >
         </h1>
         <div class="max-w-3xl mx-auto">
           <p class="text-xl text-gray-600 dark:text-gray-300 mb-8">
-            Join the community to find out more about, VPS, blogging, CMS.
+            Join the community to find out more about mental health, individual psychology, self-assessments and more..
           </p>
         </div>
 
