--- a/src/layouts/components/common/Footer.astro
+++ b/src/layouts/components/common/Footer.astro
@@ -5,7 +5,7 @@ import { getCollection } from 'astro:content';
 import menu from "@config/menu.json";
 import social from "@config/social.json";
 import { siteConfig } from "@config/site";
-import logoSVG from "@assets/favicons/bitdoze_logo_better.svg";
+import logoSVG from "@assets/favicons/bitdoze_logo_better1.png";
 
 
 // Extract footer menu items
