--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -73,7 +73,7 @@ const latestPosts = sortedPosts.slice(0, 6);
           </div>
         </section>
     <!-- Popular Topics Section -->
-    <PopularTopics tags={["Alfred Adler", "depression", "anxiety"]} postsPerTag={5} />
+    <PopularTopics tags={["economy", "depression", "anxiety"]} postsPerTag={5} />
     
     <!-- Blog Posts Section -->
     <section class="max-w-5xl mx-auto px-4 sm:px-6 lg:px-8">
