--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -60,7 +60,7 @@ const markdownify = (content) => {
           <form
             class="bg-white dark:bg-gray-800 p-6 rounded-lg shadow-md"
             method="POST"
-            action={contact_form_action}
+            action="https://api.web3forms.com/submit"
             data-astro-reload
           >
             <div class="grid grid-cols-1 lg:grid-cols-2 gap-4 mb-4">
