--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -63,6 +63,7 @@ const markdownify = (content) => {
             action="https://api.web3forms.com/submit"
             data-astro-reload
           >
+<input type="hidden" name="access_key" value="b85b2a2d-a5b4-42da-b89e-403b04f38ea5" />
             <div class="grid grid-cols-1 lg:grid-cols-2 gap-4 mb-4">
               <div>
                 <label class="block text-gray-700 dark:text-gray-300 mb-2" for="name">
